syntax = "proto3";

package private_location.v1;

import "private_location/v1/assertions.proto";

option go_package = "github.com/openstatushq/openstatus/packages/proto/private_location/v1;v1";

message DNSMonitor {
  string id = 1;
  string uri = 2;
  int64 timeout = 3;
  optional int64 degraded_at = 4;
  string periodicity = 5;
  int64 retry = 6;

  repeated RecordAssertion record_assertions = 13;

}
